// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarContext should apply a hook for clearing a toolbar field through redux: clear single field 1`] = `
[
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "billing_provider": null,
        "dynamicType": "SET_QUERY-undefined",
        "type": "SET_QUERY-undefined",
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_GRAPH_LEGEND-undefined-inverted",
        "dynamicType": "SET_GRAPH_LEGEND-undefined-inverted",
        "id": "undefined-inverted",
        "type": "SET_GRAPH_LEGEND-undefined-inverted",
        "value": null,
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "category": null,
        "dynamicType": "SET_QUERY-undefined",
        "type": "SET_QUERY-undefined",
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "dynamicType": "SET_QUERY-undefined",
        "sla": null,
        "type": "SET_QUERY-undefined",
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "dynamicType": "SET_QUERY-undefined",
        "type": "SET_QUERY-undefined",
        "usage": null,
      },
    ],
  ],
]
`;

exports[`ToolbarContext should apply a hook for clearing specific active toolbar fields through redux: clear all fields 1`] = `
[
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "billing_provider": null,
        "dynamicType": "SET_QUERY-undefined",
        "type": "SET_QUERY-undefined",
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_GRAPH_LEGEND-undefined-inverted",
        "dynamicType": "SET_GRAPH_LEGEND-undefined-inverted",
        "id": "undefined-inverted",
        "type": "SET_GRAPH_LEGEND-undefined-inverted",
        "value": null,
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "category": null,
        "dynamicType": "SET_QUERY-undefined",
        "type": "SET_QUERY-undefined",
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "dynamicType": "SET_QUERY-undefined",
        "sla": null,
        "type": "SET_QUERY-undefined",
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "dynamicType": "SET_QUERY-undefined",
        "type": "SET_QUERY-undefined",
        "usage": null,
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "billing_provider": null,
        "dynamicType": "SET_QUERY-undefined",
        "type": "SET_QUERY-undefined",
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_GRAPH_LEGEND-undefined-inverted",
        "dynamicType": "SET_GRAPH_LEGEND-undefined-inverted",
        "id": "undefined-inverted",
        "type": "SET_GRAPH_LEGEND-undefined-inverted",
        "value": null,
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "category": null,
        "dynamicType": "SET_QUERY-undefined",
        "type": "SET_QUERY-undefined",
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "dynamicType": "SET_QUERY-undefined",
        "sla": null,
        "type": "SET_QUERY-undefined",
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_INSTANCES-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_INSTANCES-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "dir": undefined,
        "dynamicType": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
        "offset": 0,
        "sort": undefined,
        "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS-undefined",
      },
      {
        "__dynamic": true,
        "__originalType": "SET_QUERY-undefined",
        "dynamicType": "SET_QUERY-undefined",
        "type": "SET_QUERY-undefined",
        "usage": null,
      },
    ],
  ],
  [
    [
      {
        "__dynamic": true,
        "__originalType": "SET_FILTER_TYPE-undefined",
        "currentFilter": null,
        "dynamicType": "SET_FILTER_TYPE-undefined",
        "type": "SET_FILTER_TYPE-undefined",
      },
    ],
  ],
]
`;

exports[`ToolbarContext should apply a hook for retrieving secondary toolbar field components: secondary field, rangedMonthly 1`] = `
{
  "itemFields": [],
  "secondaryFields": [
    <ToolbarItem>
      <RangedMonthly
        isFilter={false}
        isSecondary={true}
      />
    </ToolbarItem>,
  ],
}
`;

exports[`ToolbarContext should return specific properties: specific properties 1`] = `
{
  "useToolbarFieldClear": [Function],
  "useToolbarFieldClearAll": [Function],
  "useToolbarFields": [Function],
}
`;
